# ChangeLog for net-im/mcabber
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.49 2010/05/06 11:31:20 wschlich Exp $

*mcabber-0.10.0 (06 May 2010)

  06 May 2010; Wolfram Schlich <wschlich@gentoo.org> -mcabber-0.9.6.ebuild,
  -mcabber-0.9.9.ebuild, -mcabber-0.9.9-r1.ebuild, +mcabber-0.10.0.ebuild:
  version bump, removed some old versions

*mcabber-0.9.10 (04 Nov 2009)

  04 Nov 2009; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.10.ebuild:
  version bump

  30 Sep 2009; Raúl Porcel <armin76@gentoo.org> mcabber-0.9.9-r1.ebuild:
  sparc stable wrt #281836

  06 Sep 2009; Jeremy Olexa <darkside@gentoo.org> mcabber-0.9.9-r1.ebuild:
  amd64 stable, bug 281836. only breifly runtime tested, appears to work
  just fine

  05 Sep 2009; Brent Baude <ranger@gentoo.org> mcabber-0.9.9-r1.ebuild:
  Marking mcabber-0.9.9-r1 ppc64 for bug 281836

  29 Aug 2009; nixnut <nixnut@gentoo.org> mcabber-0.9.9-r1.ebuild:
  ppc stable #281836

  25 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  mcabber-0.9.9-r1.ebuild:
  stable x86, bug 281836

*mcabber-0.9.9-r1 (30 Jul 2009)

  30 Jul 2009; Wolfram Schlich <wschlich@gentoo.org>
  +mcabber-0.9.9-r1.ebuild:
  fix bugs #276512 and #277888

  17 Dec 2008; Markus Meier <maekke@gentoo.org> mcabber-0.9.9.ebuild:
  amd64/x86 stable, bug #251139

  22 Oct 2008; Wolfram Schlich <wschlich@gentoo.org> -mcabber-0.9.7.ebuild,
  -mcabber-0.9.8.ebuild:
  removed old versions

*mcabber-0.9.9 (22 Oct 2008)

  22 Oct 2008; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.9.ebuild:
  version bump

  07 Oct 2008; Wolfram Schlich <wschlich@gentoo.org> -mcabber-0.9.5.ebuild:
  removed old version

*mcabber-0.9.8 (07 Oct 2008)

  07 Oct 2008; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.8.ebuild:
  version bump

  05 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org> metadata.xml:
  Add USE flag description to metadata as per GLEP 56.
