@@ -1,6 +1,7 @@
 DIST mcabber-0.10.0.tar.bz2 552111 RMD160 3c25f13bea884e929c00d696df9acdbf8811fa84 SHA1 8abf98b0577db3bbc87a1568b8f72738cb9384b7 SHA256 ef1bb95238a32f841c6e7032550b40197643843b6e459f44ad53c558f5d75c03
 DIST mcabber-0.9.10.tar.bz2 579621 RMD160 656818b304b9088097ad2a0fe485f38cd0e704fc SHA1 6ff8222ed8956e078a3c3d519013a125e715e499 SHA256 431e47ba3095c1cc6c11931bab9034c42ba0911dfadcc137ba765803e4460cb5
+EBUILD mcabber-0.10.0-r1.ebuild 3158 RMD160 9d010f5cdddb371016cdc4c6dfe800690eb097e0 SHA1 89e2d3bd0f84b9d2611de0d5727b05d215e95525 SHA256 a8e334014fcfa10a7d8e48c1499abd9ea716ef9763ca0328ee2d6ac4cfa9d277
 EBUILD mcabber-0.10.0.ebuild 2730 RMD160 f28667f9e21401e758e1ce65b39300507b600581 SHA1 fc6266e6c8e97ac669af807a9042fd891aec928a SHA256 4e9662e968c8edcd026c6fc2d6c58e0ae6a1745268e8166aa6f0449b65fc6e84
 EBUILD mcabber-0.9.10.ebuild 2973 RMD160 91bf71308e905f01009a4e44d370f83da4267c78 SHA1 cf7cf2347e9905e1c256a2dc2d998af76bd2cd05 SHA256 6e80b4b706f1499e93417b9d6e30c576c22c4d0c8b318948335440aacbb03ffe
-MISC ChangeLog 6593 RMD160 38ebcaa99e398dd682f2977a032c3d9c9a092f79 SHA1 8adc79756b88cc683c382567e0ae7c8751721261 SHA256 820e6fd48f1ea650e1fec5948d01ecbad39e69c1f8f143c872a6d99e7ee85b91
-MISC metadata.xml 665 RMD160 f504295bc63c5fdc0de58d75c4688088b25a1774 SHA1 f81c1831ed3d53f1665a8cdfff81be228517c2e6 SHA256 c33a2ae1ff921034609b3744b287c5fb3345ee6f8156af0b09900a1e4e0a4d0f
+MISC ChangeLog 6792 RMD160 91fbbeaa6e0bf3871f14d6d0d852b389293ceb10 SHA1 f2c5bf32a7cadbb45e773c6c639d9fd0fe74e31e SHA256 d46311371944e7c592bbf34effdbbc434add798309095db530e09051d290f0f3
+MISC metadata.xml 744 RMD160 801703379e85f7c82ac3d6f8131cbf61f02d21fe SHA1 01a075c4fdedf16867054db06e6d1407c3e17e96 SHA256 d3eac22e4b09b3fb0d21cb7a1f637719d0d0188c6b9bfde2527a02be9cf37371
