@@ -1,6 +1,12 @@
 # ChangeLog for net-im/mcabber
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.49 2010/05/06 11:31:20 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.50 2010/07/18 11:38:49 idl0r Exp $
+
+*mcabber-0.10.0-r1 (18 Jul 2010)
+
+  18 Jul 2010; Christian Ruppert <idl0r@gentoo.org>
+  +mcabber-0.10.0-r1.ebuild, metadata.xml:
+  Revision bump, bug 316391. QA fixes. New useflags. Some improvements.
 
 *mcabber-0.10.0 (06 May 2010)
 
